fixed cert page but it looks damn ugly and out of place
use this for programming language and framework icons instead of certs and have it under about me?

--- a/src/components/resume/wrapper.css
+++ b/src/components/resume/wrapper.css
@@ -1,18 +1,21 @@
 .wrapper {
-  margin-top: 2rem;
   width: 90%;
   max-width: 1536px;
   margin-inline: auto;
-  height: 100px;
+  height: 140px;
+  margin-bottom: 2rem;
   position: relative;
   overflow: hidden;
   mask-image: linear-gradient(
     to right,
     rgba(0, 0, 0, 0),
-    rgba(0, 0, 0, 1) 20%,
-    rgba(0, 0, 0, 1) 80%,
+    rgba(0, 0, 0, 1) 20%,  
+    rgba(0, 0, 0, 1) 80%,  
     rgba(0, 0, 0, 0)
   );
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3) inset;
 }
 
 @keyframes scrollLeft {
@@ -29,16 +32,14 @@
 
 .itemLeft, .itemRight {
   width: 160px;
-  height: 100px;
-  background-color: #e11d48;
-  border-radius: 6px;
+  height: 90%; /* need help here! */
   position: absolute;
   animation-timing-function: linear;
   animation-duration: 30s;
   animation-iteration-count: infinite;
-  background-size: contain;
+  background-size: contain; /* Sets width to container's width and scales height accordingly */
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center; /* Aligns the image to start at the top */
 }
 
 
